fixed issue: #2116 check connection test message is not completely visible added css to wrap the check connection test message

--- a/server/webapp/WEB-INF/rails.new/app/assets/stylesheets/structure/application.scss
+++ b/server/webapp/WEB-INF/rails.new/app/assets/stylesheets/structure/application.scss
@@ -449,5 +449,17 @@ button.check_connection {
   + .connection_test_message {
     margin: 8px;
   }
+
+  + .connection_test_message pre{
+    width: 670px;
+    float: left;
+    white-space: pre-wrap; /* css-3 should we be so lucky... */
+    white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+    white-space: -pre-wrap; /* Opera 4-6 ?? */
+    white-space: -o-pre-wrap; /* Opera 7 ?? */
+    word-wrap: break-word; /* Internet Explorer 5.5+ */
+    _white-space: pre; /* IE only hack to re-specify in addition to word-wrap  */
+  }
+
 }
 
